fix: addPlayer and remmovePlayer calls
